# agentic-ai-lab

./: main.py  pyproject.toml
1_foundation/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
1_foundation/content/: text.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
3_crew/coder/: pyproject.toml
3_crew/coder/output/: solution.md
3_crew/coder/sandbox/: calculate_series.py  series_calculator.py
3_crew/coder/src/coder/: crew.py  main.py
3_crew/coder/src/coder/config/: agents.yaml  tasks.yaml
3_crew/coder/src/coder/tools/: sanbox_tools.py
3_crew/debate/: report.md
3_crew/debate/output/: propose.md
3_crew/debate/src/debate/: crew.py  main.py
3_crew/debate/src/debate/config/: agents.yaml  tasks.yaml
3_crew/engineering_team/: pyproject.toml
3_crew/engineering_team/sandbox/: design.md
3_crew/engineering_team/src/engineering_team/: crew.py  main.py  patch.py
3_crew/engineering_team/src/engineering_team/config/: agents.yaml  tasks.yaml
3_crew/engineering_team/src/engineering_team/tools/: sandbox_tools.py
3_crew/financial_researcher/: pyproject.toml
3_crew/financial_researcher/output/: report.md
3_crew/financial_researcher/src/financial_researcher/: crew.py  main.py
3_crew/financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
3_crew/stock_picker/: pyproject.toml
3_crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker/src/stock_picker/: crew.py  main.py
4_langchain_langgraph/: 1_lab1.ipynb
(+1 files in other folders)
