[project]
name = "agentic-ai-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "gradio>=6.19.0",
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    "openai>=2.43.0",
    "openai-agents>=0.17.6",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
]
